Kubernetes files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapi-service
spec:
  selector:
    app: flaskapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
